--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+
 header{
     display: flex;
     flex-direction: column;
@@ -6,14 +14,20 @@ header{
 }
 
 #logo{
-    width: 10%;
-    height: 10%;
+    width: 100%;
+    height: 6rem;
     display: inline;
+}
+
+#search-container input {
+    outline: none;
+    border: none;
 }
 
 .cards{
     display: inline-block;
     border: 1px solid black;
+    border-radius: 0.75rem;
 }
 
 #ul{
@@ -22,4 +36,65 @@ header{
 
 .nav-link{
     display: inline-block;
+}
+
+@media screen and (max-width: 500px){
+    
+    header{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin: 0;
+    }
+    
+    #search-container{
+        margin: auto;
+        width: 90%;
+        border: solid 0.15rem black;
+        border-radius: 0.7rem;
+    }
+
+    #search-container input{
+        background-color: transparent;
+        width: 75%;
+        height: 1.7rem;
+        margin: 2% 2% 2% 0;
+        padding: 1rem;
+        
+    }
+    
+    #search-container button{
+        margin: 0;
+        width: 15%;
+        background: transparent;
+        border: transparent;
+    }
+
+    #profile-settings{
+        display: none;
+    }
+
+    #feed-container{
+        width: 100%;
+        margin-top: 1rem;
+    }
+    
+    .cards{
+        display: flex;
+        text-align: center;
+        margin: 3% auto;
+        display: block;
+        width: 90%;
+        height: 1000%;
+    }
+
+    .cards img{
+        margin-top: 5%;
+        width: 95%;
+        object-fit: contain;
+    }
+
+    #ul{
+        display: none;
+    }
 }
