--- a/src/public/css/perfil_tatuador.css
+++ b/src/public/css/perfil_tatuador.css
@@ -1,77 +1,166 @@
-body{
-    background-color: #242424;
-    font-family: 'Roboto', 'sans-serif';
-}
+@media screen and (max-width: 600px) {
 
-#header-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-}
+    body{
+        background-color: #242424;
+        font-family: 'Roboto', 'sans-serif';
+    }
 
-#info-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+    #header-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1em;
+    }
 
-#info-container p{
-    display: inline-block;
-    width: 90%;
-    margin-top: 1.5em;
-    color: #929292;
-}
+    #info-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 
-#img-container{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 2px solid #929292;
-}
+    #info-container p{
+        display: inline-block;
+        width: 90%;
+        margin-top: 1.5em;
+        color: #929292;
+    }
 
-#img-container img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
+    #img-container{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: 2px solid #929292;
+    }
 
-#username{
-    align-self: flex-end;
-    color: #929292;
-    margin-bottom: 0.5em;
-    font-weight: bold;
-}
+    #img-container img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
 
-#settings{
-    width: 28px;
-    height: 28px;
-    background-color: transparent;
-    border: none;
-    align-self: flex-end;
-    margin-bottom: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
+    #username{
+        align-self: flex-end;
+        color: #929292;
+        margin-bottom: 0.5em;
+        font-weight: bold;
+    }
 
-#rating-container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
+    #settings{
+        width: 28px;
+        height: 28px;
+        background-color: transparent;
+        border: none;
+        align-self: flex-end;
+        margin-bottom: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
 
-#rating-container tr{
-    display: block;
-    width: 100%;
+    #rating-container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #rating-container tr{
+        display: block;
+        width: 100%;
+        
+    }
+
+    #rating-container tr td {
+        width: 33%;
+        text-align: center;
+    }
+
+    #post-options{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        border-top: 2px solid #929292;
+        padding-top: 0.5em;
+        grid-column: 1/-1;
+    }
+
+    #post-options button{
+        width: 100%;
+        height: 40px;
+        border: none;
+        color: #929292;
+        font-size: 1.0em;
+        background-color: transparent;
+        justify-self: center;
+        transition: all 0.5s;
+    }
     
+    
+    #post-options button:hover{
+        transition: all 0.5s;
+        background-color: rgba(255, 255, 255, 0.10);
+    }
+
+    #cards-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        overflow: scroll;
+    }
+
+    .article-cards{
+        border: 2px solid #929292;
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 0.5em;
+        width: 100%;
+    }
+
+    .article-cards img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .article-cards p, .article-cards h4{
+        color: #929292;
+        margin-bottom: 0;
+        text-align: center;
+    }
+
+    .article-cards p{
+        text-align: left;
+        display: inline-block;
+        
+    }
+
+    .article-cards button{
+        border: none;
+        background-color: transparent;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 1em;
+        float: right;
+    }
+
+    #nav-container{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #242424;
+        
+    }
+
+    #nav-container ul{
+        padding: 0;
+        list-style-type: none;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    #nav-container ul li{
+        display: inline-block;
+    }
+
+
 }
-
-#rating-container tr td {
-    width: 33%;
-    text-align: center;
-}
-
-
