--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     padding: 0;
     font-family: "Poppins", sans-serif;
+    color: #929292;
+}
+
+body {
+    background-color: #242424;
 }
 
 header{
@@ -26,7 +31,7 @@ header{
 
 .cards{
     display: inline-block;
-    border: 1px solid black;
+    border: 1px solid #929292;
     border-radius: 0.75rem;
 }
 
@@ -38,7 +43,7 @@ header{
     display: inline-block;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 600px){
     
     header{
         display: flex;
@@ -50,7 +55,7 @@ header{
     #search-container{
         margin: auto;
         width: 90%;
-        border: solid 0.15rem black;
+        border: solid 0.15rem #929292;
         border-radius: 0.7rem;
     }
 
@@ -85,13 +90,13 @@ header{
         margin: 3% auto;
         display: block;
         width: 90%;
-        height: 1000%;
+        height: 80%;
     }
-
-    .cards img{
-        margin-top: 5%;
-        width: 95%;
-        object-fit: contain;
+    .cards img {
+        border-radius: 0.75rem;
+        width: 100%;
+        height: 50vh;
+        overflow: hidden;
     }
 
     #ul{
