--- a/src/public/css/perfil_tatuador.css
+++ b/src/public/css/perfil_tatuador.css
@@ -8,7 +8,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1em;
+    padding: 10px;
 }
 
 #info-container{
@@ -20,7 +20,7 @@ body{
 #info-container p{
     display: inline-block;
     width: 90%;
-    margin-top: 1.5em;
+    margin-top: 15px;
     color: #929292;
 }
 
@@ -40,7 +40,7 @@ body{
 #username{
     align-self: flex-end;
     color: #929292;
-    margin-bottom: 0.5em;
+    margin-bottom: 5px;
     font-weight: bold;
 }
 
@@ -50,7 +50,7 @@ body{
     background-color: transparent;
     border: none;
     align-self: flex-end;
-    margin-bottom: 1em;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,20 +66,21 @@ body{
 
 #rating-container h3{ 
     color: #929292;
-    font-size: 1.2em;
+    font-size: 18px;
     font-weight: bold;               
 }
 
 #rating-container p{ 
     color: #929292;
-    font-size: 1.2em;
+    font-size: 20px;
+    font-weight: bold; 
 }
 
 #post-options{
     display: grid;
     grid-template-columns: 1fr 1fr;
     border-top: 2px solid #929292;
-    padding-top: 0.5em;
+    padding-top: 10px;
     grid-column: 1/-1;
 }
 
@@ -88,7 +89,7 @@ body{
     height: 40px;
     border: none;
     color: #929292;
-    font-size: 1.0em;
+    font-size: 16px;
     background-color: transparent;
     justify-self: center;
     transition: all 0.5s;
@@ -103,22 +104,29 @@ body{
 #cards-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+    grid-gap: 5px;
     margin-bottom: 70px;
-    overflow: scroll;
 }
 
 .article-cards{
     border: 2px solid #929292;
     box-sizing: border-box;
     border-radius: 5px;
-    padding: 0.5em;
+    padding: 5px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .article-cards img{
     max-width: 100%;
     max-height: 100%;
+    align-self: center;
+}
+
+.tattoo-art{
+    width: 293px;
+    height: 293px;
 }
 
 .article-cards p, .article-cards h4{
@@ -139,7 +147,7 @@ body{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1em;
+    margin-top: 16px;
     float: right;
 }
 
@@ -165,6 +173,7 @@ body{
 }
 
 @media screen and (min-width: 720px) {
+
     #header-container, #cards-container{
         width: 70%;
         margin: 0 auto;
@@ -188,13 +197,61 @@ body{
         align-items: center;
         justify-content: space-around;
     }
+
+
+    .article-cards{
+        border: 2px solid #929292;
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 5px;
+        width: 100%;
+        
+    }
+
+    .tattoo-art{
+        width: 100%;
+    }
+    
 }
 
 
-@media screen and (min-width: 720px){
+@media screen and (min-width: 1200px){
 
-    #header-container, #cards-container{
-        width: 50%;
-        margin: 0 auto;
+    #nav-container{
+        width: 100%;
+        height: 5%;
+    }
+
+    #header-container{
+        margin-top: 5%;
+    }
+
+    #nav-container ul{
+        flex-direction: row;
+    }
+
+    #img-container{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: 2px solid #929292;
+    }
+    
+    #img-container img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+    }
+
+    #cards-container{
+        grid-template-columns: repeat(auto-fit, minmax(293px, 1fr));
+    }
+
+    .article-cards{
+        width: 100%;
+    }
+
+    .tattoo-art{
+        width: 293px;
     }
 }
