--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -20,8 +20,18 @@ header{
 
 #logo{
     width: 100%;
-    height: 6rem;
+    height: 10rem;
     display: inline;
+}
+
+#feed-container{
+    width: 100%;
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 90%;
+    margin: auto;
+    justify-content: center;
 }
 
 #search-container{
@@ -37,7 +47,7 @@ header{
     border: none;
         background-color: transparent;
         width: 100%;
-        height: 1.7rem;
+        height: 5vh;
         padding: 1.1rem;
 }
 
@@ -50,6 +60,20 @@ header{
     display: inline-block;
     border: 1px solid #0D0D0D;
     border-radius: 0.75rem;
+    font-size: 1rem;
+    max-width: 33vh;
+    height: 65vh;
+    display: flex;
+    text-align: center;
+    display: block;
+    margin: 3% 3%;
+}
+
+.cards img {
+    border-radius: 0.75rem;
+    width: 33vh;
+    height: 35vh;
+    overflow: hidden;
 }
 
 .cards .btn-salvar{
@@ -57,6 +81,10 @@ header{
     border: transparent;
     border-radius: 0.5rem;
     color: #f2f2f2; 
+    width: 20vh;
+    height: 50px;
+    font-size: 1rem;
+    margin-bottom: 1%;
 }
 
 #ul{
