--- a/src/public/css/cadastro_tatuagem.css
+++ b/src/public/css/cadastro_tatuagem.css
@@ -146,3 +146,8 @@ body {
   .submit:active {
     background-color: #494747;
   }
+  
+  a, u {
+    text-decoration: none;
+    color: inherit; 
+}
