--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -44,13 +44,13 @@
         text-align: center;
         margin: 3% auto;
         display: block;
-        width: 40%;
+        width: 33vh;
         height: 65vh;
     }
     .cards img {
         border-radius: 0.75rem;
         width: 100%;
-        height: 35vh;
+        height: 33vh;
         overflow: hidden;
     }
     .cards .btn-salvar {
