--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -8,18 +8,17 @@
 
 .cards {
     box-shadow: 0 0 3em rgba(0,0,0,0.4);
-    display: inline-block;
     border-radius: 0.75rem;
     font-size: 1rem;
     width: 33vh;
-    height: 65vh;
-    display: flex;
+    height: 35vh;
     text-align: center;
     display: block;
     margin: 3% 3%;
 }
 
 .cards img {
+    position: relative;
     border-radius: 0.75rem;
     width: 100%;
     height: 35vh;
@@ -35,9 +34,38 @@
     height: 50px;
     font-size: 1rem;
     margin-bottom: 1%;
+    align-self: center;
+}
+
+.art-info{
+    transform: translateY(-335px);
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 0.75rem;
+}
+
+.art-info p{
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.815);
+    visibility: visible;
+    margin-top: 150px;
+}
+
+.art-info-animation{
+    transition: all .5s ease-in;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.815);
+    visibility: visible;
+    z-index: 1;
 }
 
 @media (min-width: 600px) and (max-width: 1280px) {
+
+    
     .cards {
         box-shadow: 0 0 3em rgba(0,0,0,0.4);
         display: flex;
