--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -63,44 +63,43 @@
     z-index: 1;
 }
 
-@media (min-width: 600px) and (max-width: 1280px) {
-
-    
+@media (min-width: 600px) and (max-width: 1350px) {
     .cards {
         box-shadow: 0 0 3em rgba(0,0,0,0.4);
-        display: flex;
-        text-align: center;
         margin: 3% auto;
         display: block;
         width: 33vh;
-        height: 65vh;
     }
     .cards img {
         border-radius: 0.75rem;
         width: 100%;
-        height: 33vh;
         overflow: hidden;
     }
     .cards .btn-salvar {
         width: 30%;
         height: 30px;
-        margin-bottom: 8px;
+    }
+
+    .art-info{
+       margin-top: 11%;
+    }
+}
+
+@media (min-width: 1395px){
+    .art-info{
+       margin-top: 11%;
     }
 }
 
 @media screen and (max-width: 600px) {
     .cards {
-        box-shadow: 0 0 3em rgba(0,0,0,0.4);
-        display: flex;
-        text-align: center;
         margin: 3% auto;
-        display: block;
         width: 90%;
-        height: 80%;
+        height: 50vh;
     }
+
     .cards img {
         border-radius: 0.75rem;
-        width: 100%;
         height: 50vh;
         overflow: hidden;
     }
@@ -109,4 +108,7 @@
         height: 30px;
         margin-bottom: 8px;
     }
+    .art-info{
+        margin-top: -11.4vh;
+     }
 }
