--- a/frontend/src/styles/ProfessionalProfile.css
+++ b/frontend/src/styles/ProfessionalProfile.css
@@ -218,6 +218,7 @@ body{
 @media screen and (min-width: 1200px){
 
     #nav-container{
+        display: none;
         width: 100%;
         height: 5%;
     }
