--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -24,25 +24,18 @@ header {
 }
 
 #search-container {
-    background-color: #262626;
-    opacity: 0.1;
     margin: auto;
-    border-radius: 0.3rem;
-    width: 90%;
+    width: 80%;
 }
 
 #search-container input {
-    outline: none;
     border: none;
-    background-color: transparent;
+    outline: none;
+    background-color: #ccc;
+    border-radius: 0.3rem;
     width: 100%;
     height: 5vh;
     padding: 1.1rem;
-}
-
-::placeholder {
-    color: white;
-    /*Não tô conseguindo deixar preto ainda*/
 }
 
 #ul {
