--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,26 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap');
 
-#profile-settings {
-    border-bottom: 1px solid #ccc;
-    display: flex;
+@media screen and (max-width: 720px){
+    #menu-img{
+         width: 100%;
+         height: 100%;
+         display: inline-block;
+         visibility: visible;
+    }
+    
+    #profile-settings{
+        display: block;
+    }
+ 
+    #botao-span{
+        display: block;
+        width: 7%;
+        margin: 0.5rem 0 0 0.5rem;
+    }
+
+    .profile-settings-animation{
+        position: relative;
+        transition: all 0.5s ease-out;
+        height: 100%;
+        z-index: 1000;
+        margin-bottom: -920px;
+    }
+
+    .nav-menu{
+        display: block;
+        height: 100%;
+        transform: translateX(-800px);
+    }
+
+    .nav-menu-animation{
+        transition: all 0.5s ease-out;
+        transform: translateX(20px);
+    }
+
+    #nav-ul{
+        height: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        list-style: none;
+    }
+
+    #nav-ul li{
+        width: 100%;
+    }
+
+    #profile-settings li:active{
+        cursor: pointer;
+        background-color: rgba(0, 0,0, 0.1);
+        padding: 1rem;
+    }
 }
 
-#profile-settings li {
-    display: inline-block;
+@media screen and (min-width: 721px) {
+    #menu-img{
+        display: none;
+        visibility: hidden;
+    }
+    
+    #profile-settings {
+        border-bottom: 1px solid #ccc;
+        display: flex;
+        height: auto;
+    }
+    
+    #profile-settings li {
+        display: inline-block;
+    }
+    
+    #profile-settings a {
+        text-decoration: none;
+        border: none;
+        margin: 0;
+        padding: 1rem;
+        transition: linear 0.7s;
+    }
+    
+    #profile-settings li:hover {
+        cursor: pointer;
+        background-color: rgba(0, 0,0, 0.1);
+        padding: 1rem;
+    }
+    
 }
 
-#profile-settings a {
-    text-decoration: none;
-    border: none;
-    margin: 0;
-    padding: 1rem;
-    transition: linear 0.7s;
-}
 
-#profile-settings a:hover {
-    cursor: pointer;
-    background-color: rgba(0, 0,0, 0.1);
-}
+
+
+
+
 
 
 
