--- a/frontend/src/styles/SignupClient.css
+++ b/frontend/src/styles/SignupClient.css
@@ -40,6 +40,14 @@ input.form-content{
     color: white;
 }
 
+.error{
+    width: 80%;
+    margin-left: 15px;
+    margin-top: -5px;
+    color: #ab2e46;
+    font-size: 10px;
+}
+
 
 @media screen and (min-width: 1200px){
     .form-content{
@@ -52,5 +60,9 @@ input.form-content{
         height: 3rem;
         border-radius: 0.5rem;
         margin-top: 1%;
+    }
+
+    .error{
+        width: 60%;
     }
 }
