--- a/frontend/src/styles/EditTattoo.css
+++ b/frontend/src/styles/EditTattoo.css
@@ -1,4 +1,36 @@
+
 ::placeholder {
     color: rgb(0, 0, 0);
   }
 
+ .img-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+ }
+
+  #img-input{
+    margin-bottom: 10px;
+    max-width: 100px;
+  }
+
+  #button-container{
+   margin-left: 20vh;
+   margin-right: 20vh;
+  }
+
+  #price-container{
+    margin-left: 25vh;
+  }
+ 
+  @media screen and (max-width: 400px){
+    #button-container{
+      margin-left: 10vh;
+      margin-right: 25vh;
+     }
+   
+     #price-container{
+       margin-left: 15vh;
+     }
+  }
