--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -68,6 +68,7 @@
     background-color: rgba(255, 255, 255, 0.815);
     visibility: visible;
     z-index: 1;
+    margin-top: -92px;
 }
 
 @media (min-width: 600px) and (max-width: 1350px) {
