--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap');
 
 .cards {
+    position: relative;
     box-shadow: 0 0 3em rgba(0,0,0,0.4);
     border-radius: 0.75rem;
     font-size: 1rem;
@@ -33,6 +34,7 @@
 }
 .cards .btn-comprar {
     background-color: black;
+    display: block;
     border: transparent;
     border-radius: 0.5rem;
     color: #f2f2f2;
@@ -45,8 +47,10 @@
 }
 
 .art-info{
-    transform: translateY(-335px);
-    visibility: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -61,15 +65,11 @@
     margin-top: 150px;
 }
 
-.art-info-animation{
-    transition: all .5s ease-in;
-    width: 100%;
-    height: 100%;
+.art-info h6, #username_tattoo{
     background-color: rgba(255, 255, 255, 0.815);
-    visibility: visible;
-    z-index: 1;
-    margin-top: -92px;
 }
+
+
 
 @media (min-width: 600px) and (max-width: 1350px) {
     .cards {
